cm-vars.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cm-vars
spec:
  containers:
  - name: test1
    image: cirros
    command: ["/bin/sh", "-c", "env"]
