default-storageclass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-mysql
  labels:
    app: demo
spec:
  selector:
    matchLabels:
      app: demo
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: demo
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-demo-claim
