pv-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: local-pv-pod
spec:
  volumes:
    - name: local-pv-storage
      persistentVolumeClaim:
        claimName: local-pv-claim
  containers:
    - name: local-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: local-pv-storage
