jaeger.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
    jager-infra: jaeger-service
  name: jaeger
  namespace: istio-system
spec:
  ports:
  - name: query-http
    protocol: TCP
    port: 16686
    targetPort: 16686
    nodePort: 32686
  selector:
    app: jaeger
  type: NodePort
