littlebird-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: littlebird-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: littlebird
spec:
  hosts:
  - "*"
  gateways:
  - littlebird-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: littlebird
        port:
          number: 9080
