nginxsvc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxsvc-ingress
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: nginxsvc.info
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxsvc
          servicePort: 80
